--- a/config/app.yml
+++ b/config/app.yml
@@ -1,8 +1,10 @@
 # config/app.yml for rails-settings-cached
 defaults: &defaults
-  foo: "Foo"
-  bar: 123
-
+  titulo_coordinador: "T.S.U"
+  nombres_coordinador: "Alejandro Luis Rodriguez"
+  cedula_coordinador: "V-8.397.611"
+  jornada_de_trabajo_inicio: "8:00 a.m"
+  jornada_de_trabajo_fin: "3:00 p.m"
 development:
   <<: *defaults
 
