--- a/config/database.yml
+++ b/config/database.yml
@@ -14,10 +14,7 @@ default: &default
   password: "0"
 development:
   <<: *default
-  host: localhost
-  timeout: 5000
-  username: pos
-  password: 0
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -27,4 +24,5 @@ test:
 
 production:
   <<: *default
+  adapter: postgresql
   #database: db/production.sqlite3
