stadisticas, requisitos, correcciones

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,4 +23,8 @@ test:
 
 production:
   <<: *default
+  host: localhost
+  timeout: 5000
+  user: pos
+  password: 0
   #database: db/production.sqlite3
